# X2JPEG

./: LICENSE  README.md
client/: cornifer.css  illustrator.js  index.html  masterrahool.js
server/: CMakeLists.txt  X2JPEG.cpp
